# BNK_Bot_S_publish

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
backend/: __init__.py
backend/app/: auth_store.py  config.py  main.py  runtime_store.py  schemas.py
backend/app/agents/: __init__.py  sql_intent_classifier.py  supervisor.py
backend/app/api/: admin.py  auth.py  chat.py  ingest.py  runtime.py  search.py  source_sync.py  storage.py
backend/app/embedding/: cache.py  embedder.py
backend/app/foundry/: agent_client.py
backend/app/ingestion/: chunker.py  indexer.py  pipeline.py  (+3 more)
backend/tests/: test_auth_and_ticket_flow.py  test_azure_blob_upload.py  test_azure_monitor.py  test_embedding_fallback.py  test_end_to_end.py  test_foundry_helpers.py  test_frontend_parser.py  test_java_parser.py  test_mybatis_parser.py  test_rrf.py  test_source_sync.py  test_sql_intent_classifier.py  test_sql_parser.py  test_uploaded_document_parser.py
docs/: admin-monitoring-kpi-report.md  azure-agent-source-automation.md  codebase-analysis.md  final-run-and-source-ops-report.md  foundry-agent-rag-workflow.md  foundry-reset-runbook.md  foundry-source-sync.openapi.json  system-architecture-and-ui-summary.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
scripts/: dev.sh  export_knowledge_json_pages.py  ingest_sample.sh  qwen_service.sh  reset_index.sh  run_chatbot.sh  run_qwen_server.sh  sync_sources.py  sync_sources.sh  upload_azure_search.py
source_repositories/: README.md
(+63 files in other folders)
